--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "Utility to inline images, CSS and JavaScript for a web page - useful for mobile sites",
   "homepage": "http://github.com/remy/inliner",
   "main": "inliner",
-  "keywords": ["mobile", "inline", "production", "build", "minify"],
+  "keywords": [
+    "mobile",
+    "inline",
+    "production",
+    "build",
+    "minify"
+  ],
   "author": {
     "name": "Remy Sharp",
     "web": "http://github.com/remy"
@@ -12,7 +18,8 @@
   "dependencies": {
     "jsdom": "0.6.5",
     "uglify-js": "1.2.2",
-    "commander": "0.5.1"
+    "commander": "0.5.1",
+    "jsmin": "1.0.1"
   },
   "repository": {
     "type": "git",
